# PR1-Project

./: CMakeLists.txt  README.md  carteCfu.c  carteCfu.h  carteOstacolo.c  carteOstacolo.h  effetti.c  effetti.h  errors.h  general.c  general.h  giocatori.c  giocatori.h  istantanee.c  istantanee.h  main.c  mazzoCfu.c  mazzoCfu.h  memManagement.c  memManagement.h  memoria.c  memoria.h  preparazione.c  preparazione.h  salvataggiLog.c  salvataggiLog.h  saves.c  saves.h  spareggi.c  spareggi.h  starting.c  starting.h  turno.c  turno.h
files-input/: ostacoli.txt
